Update Content for release 0.11 (#41)
* Update Content for release 0.11

* Update Page Header CSS for mobile view

* Update connectors grid layout

* Fix production link

--- a/index.html
+++ b/index.html
@@ -153,15 +153,17 @@
               </div>
             </div>
             <div class="feature-strip">
-              Get the best in Data Collaboration with <strong>OpenMetadata 0.11.0 Release</strong>.
-              Watch the
+              Get the best in Data Collaboration with
+              <strong>OpenMetadata 0.11.0 Release</strong>. Watch the
               <a
                 href="https://www.youtube.com/watch?v=V_HkZsMkvho"
                 target="_blank"
                 >demo</a
               >
               or
-              <a href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a" target="_blank"
+              <a
+                href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a"
+                target="_blank"
                 >read more</a
               >.
             </div>
@@ -466,7 +468,7 @@
                   <p>Helping data engineers win their time back!</p>
                   <a
                     class="small text-arrow-icon"
-                    href="https://docs.open-metadata.org/features"
+                    href="https://docs.open-metadata.org/overview/features"
                     target="_blank"
                   >
                     Learn More
@@ -477,7 +479,7 @@
                   <div class="mb-4">
                     <img
                       class="img-fluid shadow-lg rounded-3"
-                      src="images/feature01.jpg"
+                      src="images/feature01.png"
                       alt="feature01"
                       loading="lazy"
                     />
@@ -491,7 +493,7 @@
                   <div class="mb-4">
                     <img
                       class="img-fluid shadow-lg rounded-3"
-                      src="images/feature02.jpg"
+                      src="images/feature02.png"
                       alt="feature02"
                       loading="lazy"
                     />
@@ -520,7 +522,7 @@
                       </p>
                       <a
                         class="small text-arrow-icon"
-                        href="https://docs.open-metadata.org/features"
+                        href="https://docs.open-metadata.org/overview/features#activity-feeds"
                         target="_blank"
                       >
                         Learn More
@@ -546,7 +548,7 @@
                   <p>Serves as an organizational memory of data!</p>
                   <a
                     class="small text-arrow-icon"
-                    href="https://docs.open-metadata.org/features#metadata-versioning"
+                    href="https://docs.open-metadata.org/overview/features#metadata-versioning"
                     target="_blank"
                   >
                     Learn More
@@ -569,7 +571,7 @@
                   <div class="mb-4">
                     <img
                       class="img-fluid shadow-lg rounded-3"
-                      src="images/feature04.jpg"
+                      src="images/feature04.png"
                       alt="feature04"
                       loading="lazy"
                     />
@@ -588,7 +590,7 @@
                   <p>View the lineage at each entity level!</p>
                   <a
                     class="small text-arrow-icon"
-                    href="https://docs.open-metadata.org/features#data-lineage"
+                    href="https://docs.open-metadata.org/overview/features#data-lineage"
                     target="_blank"
                   >
                     Learn More
@@ -628,7 +630,7 @@
               </div>
               <div class="row gx-5">
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -645,7 +647,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -657,7 +659,7 @@
                   <h5>Amundsen</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -674,7 +676,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -686,7 +688,7 @@
                   <h5>Atlas</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -703,7 +705,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -716,7 +718,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -733,7 +735,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -745,24 +747,7 @@
                   <h5>Druid</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
-                  data-aos="fade-up"
-                >
-                  <a
-                    href="https://docs.open-metadata.org/integrations/connectors/elastic-search"
-                    target="_blank"
-                  >
-                    <img
-                      src="images/services/elasticsearch.png"
-                      class="media-img mb-2"
-                      alt="service-elasticsearch"
-                      loading="lazy"
-                    />
-                    <h5>Elasticsearch</h5>
-                  </a>
-                </div>
-                <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -779,7 +764,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -796,7 +781,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -814,7 +799,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -831,7 +816,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -848,7 +833,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -865,7 +850,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -882,7 +867,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -899,7 +884,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -917,7 +902,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -934,7 +919,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -951,19 +936,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
-                  data-aos="fade-up"
-                >
-                  <img
-                    src="images/services/perfect.png"
-                    class="media-img mb-2"
-                    alt="service-perfect"
-                    loading="lazy"
-                  />
-                  <h5>Prefect</h5>
-                </div>
-                <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -980,7 +953,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -992,7 +965,7 @@
                   <h5>Pulsar</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1010,7 +983,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1027,7 +1000,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1044,7 +1017,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1061,7 +1034,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1078,7 +1051,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1095,7 +1068,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1113,7 +1086,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1130,7 +1103,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1147,7 +1120,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1159,7 +1132,7 @@
                   <h5>SQLAlchemy</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1171,7 +1144,7 @@
                   <h5>LDAP</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1183,7 +1156,7 @@
                   <h5>ClickHouse</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1201,7 +1174,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1218,7 +1191,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1235,7 +1208,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1247,7 +1220,7 @@
                   <h5>Apache Iceberg</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1259,7 +1232,7 @@
                   <h5>Power BI</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1276,7 +1249,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a href="#" target="_blank">
@@ -1535,14 +1508,14 @@
                   </li>
                   <li class="mb-2">
                     <a
-                      href="https://docs.open-metadata.org/openmetadata/schemas"
+                      href="https://docs.open-metadata.org/metadata-standard/schemas"
                       target="_blank"
                       >Schemas</a
                     >
                   </li>
                   <li class="mb-2">
                     <a
-                      href="https://docs.open-metadata.org/openmetadata/apis"
+                      href="https://docs.open-metadata.org/metadata-standard/apis"
                       target="_blank"
                       >APIs</a
                     >
@@ -1556,7 +1529,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://docs.open-metadata.org/install/metadata-ingestion"
+                      href="https://docs.open-metadata.org/integrations/metadata-ingestion"
                       target="_blank"
                       >Ingestion</a
                     >
