Add logos for new connectors

--- a/index.html
+++ b/index.html
@@ -691,6 +691,34 @@
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
+                  <a href="#" target="_blank">
+                    <img
+                      src="images/services/airbyte.png"
+                      class="media-img mb-2"
+                      alt="service-airbyte"
+                      loading="lazy"
+                    />
+                    <h5>Airbyte</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a href="#" target="_blank">
+                    <img
+                      src="images/services/amazon-s3.png"
+                      class="media-img mb-2"
+                      alt="service-amazon-s3"
+                      loading="lazy"
+                    />
+                    <h5>Amazon S3</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
                   <a
                     href="https://docs.open-metadata.org/integrations/connectors/bigquery"
                     target="_blank"
@@ -761,6 +789,20 @@
                       loading="lazy"
                     />
                     <h5>Glue</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a href="#" target="_blank">
+                    <img
+                      src="images/services/gcp.png"
+                      class="media-img mb-2"
+                      alt="service-gcp"
+                      loading="lazy"
+                    />
+                    <h5>Google Cloud Service</h5>
                   </a>
                 </div>
                 <div
@@ -1117,6 +1159,34 @@
                       loading="lazy"
                     />
                     <h5>MLflow</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a href="#" target="_blank">
+                    <img
+                      src="images/services/mode.png"
+                      class="media-img mb-2"
+                      alt="service-mode"
+                      loading="lazy"
+                    />
+                    <h5>Mode</h5>
+                  </a>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a href="#" target="_blank">
+                    <img
+                      src="images/services/pinot.png"
+                      class="media-img mb-2"
+                      alt="service-pinot"
+                      loading="lazy"
+                    />
+                    <h5>Pinot</h5>
                   </a>
                 </div>
                 <div
