--- a/index.html
+++ b/index.html
@@ -1394,6 +1394,102 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/tasks-workflow-in-openmetadata-2904ae1ec5b2"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/collaboration.gif"
+                      alt="data-collaboration"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        Tasks Workflow in OpenMetadata: Taking data
+                        collaboration to the next level
+                      </h4>
+                      <p class="card-text">
+                        Collaboration is a missing aspect in the current
+                        landscape of Data that impedes the data teams in an
+                        organization to understand and work together with data
+                        better.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
+                    href="https://blog.open-metadata.org/why-are-we-building-a-data-quality-standard-1753fae87259"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="images/data-quality.gif"
+                      alt="data-quality"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        Why are we Building a Data Quality Standard?
+                      </h4>
+                      <p class="card-text">
+                        Data is at the heart of every organization, whether it’s
+                        to improve business strategies and operations, product
+                        innovation, improve customer experience, or build new
+                        efficiencies, the role of data is becoming more and more
+                        important.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a"
                     target="_blank"
                   >
@@ -1409,98 +1505,6 @@
                         Data Collaboration, Column-level Lineage, ML Models,
                         Data Profiler, Advanced Search, Data Lake Connectors,
                         and more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-10-0-release-82c4f5533c3f"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="images/Release10.jpg"
-                      alt="blogml"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.10.0 release
-                      </h4>
-                      <p class="card-text">
-                        Backend APIs, Support for database schema objects, Hard
-                        deletion of entities, Refactor service connectors, DBT
-                        changes, Security updates, and more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-9-0-release-8e7b93ab1882"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/v0.9.0.jpg"
-                      alt="v0.9.0"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.9.0 Release
-                      </h4>
-                      <p class="card-text">
-                        Data Collaboration via Activity Feeds and Conversation
-                        Threads, Data Quality and Tests, Glossary Support , New
-                        Connectors and Lineage Support for many data sources.
                       </p>
                     </div>
                     <div
