Move piwik script to the top

--- a/community.html
+++ b/community.html
@@ -72,6 +72,7 @@
   </head>
 
   <body>
+    <script src="js/piwik.js" defer></script>
     <div id="layoutDefault">
       <div id="layoutDefault_content">
         <main>
@@ -537,6 +538,5 @@
         once: true,
       });
     </script>
-    <script src="js/piwik.js"></script>
   </body>
 </html>
