--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   </head>
 
   <body>
+    <script src="js/piwik.js" defer></script>
     <div id="layoutDefault">
       <div id="layoutDefault_content">
         <main>
@@ -1692,6 +1693,5 @@
         ]
       }
     </script>
-    <script src="js/piwik.js"></script>
   </body>
 </html>
