Change "Refer Documentation"  to "Refer to our Docs"

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     alt="doc-svg"
                     loading="lazy"
                   />
-                  <h3>Refer Documentation</h3>
+                  <h3>Refer to our Docs</h3>
                   <p>
                     Benefit with the step-by-step implementation guides and get
                     started.
