--- a/index.html
+++ b/index.html
@@ -1360,8 +1360,8 @@
                     <p class="fs-4 mb-5">
                       Explore the all-in-one platform for data discovery,
                       governance, lineage, observability, quality, &amp;
-                      collaboration for centralized metadata management. Go
-                      ahead and access the full suite of features to rebuild
+                      collaboration for centralized metadata management. <br />
+                      Go ahead and access the full suite of features to rebuild
                       trust in your data.
                     </p>
                     <p>
